# geodesy

./: .gitignore  AGENTS.md  CMakeLists.txt  CMakeLists_Headers.txt  LICENSE  README.md  geodesy-config.cmake.in
docs/: CODING_RULES.md  Codex_geodesy_execution_prompts.md  GEODESY_CPP_ANALYSIS.md
docs/migration/: phase_status.md
docs/migration/reports/: phase-00-build-api-baseline-report.md  phase-01-dms-report.md  phase-02-vector3d-report.md  phase-03-baselatlon-report.md  phase-04a-spherical-dist-report.md  phase-04b-spherical-rhumb-report.md  phase-04c-spherical-polygon-report.md  phase-05a-ellipsoid-report.md  phase-05b-cartesian-report.md  phase-06-datum-report.md  phase-07a-vincenty-inverse-report.md  phase-07b-vincenty-direct-report.md  phase-08a-utm-type-report.md  phase-08b-latlon-utm-report.md  phase-08c-utm-latlon-report.md  phase-09-mgrs-report.md  phase-10-osgridref-report.md
docs/migration/templates/: phase_report_template.md
docs/superpowers/plans/: 2026-05-08-geodesy-js-to-cpp-migration.md
src/: CMakeLists.txt
src/dms/: CMakeLists.txt  dms.cpp  dms.h
src/latlon/: CMakeLists.txt  ellipsoids.h  latlon.cpp  latlon.h  latlon_ellipsoidal.cpp  latlon_ellipsoidal.h  latlon_ellipsoidal_datum.cpp  latlon_ellipsoidal_datum.h  latlon_ellipsoidal_referenceframe.cpp  latlon_ellipsoidal_referenceframe.h  latlon_ellipsoidal_referenceframe_txparams.h  latlon_ellipsoidal_vincenty.cpp  latlon_ellipsoidal_vincenty.h  latlon_nvector_ellipsoidal.cpp  latlon_nvector_ellipsoidal.h  latlon_nvector_spherical.cpp  latlon_nvector_spherical.h  latlon_osgridref.cpp  latlon_osgridref.h  latlon_spherical.cpp  latlon_spherical.h  latlon_utm.cpp  latlon_utm.h  latlon_utm_mgrs.cpp  latlon_utm_mgrs.h
src/utils/: CMakeLists.txt  algorithm.h  algorithm.hpp  strutil.cpp  strutil.h  vector3d.hpp
src/utm/: CMakeLists.txt  mgrs.cpp  mgrs.h  osgridref.cpp  osgridref.h  utm.cpp  utm.h  utm_mgrs.cpp  utm_mgrs.h
src/vector/: CMakeLists.txt  cartesian.cpp  cartesian.h  cartesian_datum.cpp  cartesian_datum.h  cartesian_referenceFrame.cpp  cartesian_referenceFrame.h  ned.cpp  ned.h  nvector_cartesian.cpp  nvector_cartesian.h  nvector_ellipsoidal.cpp  nvector_ellipsoidal.h  nvector_spherical.cpp  nvector_spherical.h  vector3d.cpp  vector3d.h
test/: CMakeLists.txt  dms_unittest.cpp  js_reference_examples_baseline_unittest.cpp  latlon_ellipsoidal_datum_unittest.cpp  latlon_ellipsoidal_referenceframe_unittest.cpp  latlon_ellipsoidal_unittest.cpp  latlon_ellipsoidal_vincenty_unittest.cpp  latlon_nvector_spherical_unittest.cpp  latlon_spherical_unittest.cpp  latlon_unittest.cpp  mgrs_unittest.cpp  osgridref_unittest.cpp  utm_unittest.cpp  vector3d_unittest.cpp
ui/: CMakeLists.txt  main.cpp
